--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,5 @@
 @import url("../src/components/FormField/FormField.css");
 @import url("../src/components/InfoTooltip/InfoTooltip.css");
 @import url("../src/components/Navigation/Navigation.css");
+@import url("../src/components/MenuPopup/MenuPopup.css");
+@import url("../src/components/NothingFound/NothingFound.css");
