--- a/src/components/FormField/FormField.css
+++ b/src/components/FormField/FormField.css
@@ -7,7 +7,7 @@
 }
 
 .form__label {
-  font-family: Inter;
+  font-family: Inter, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
@@ -34,7 +34,7 @@
 }
 
 .form__input-error {
-  font-family: Inter;
+  font-family: Inter, Arial, sans-serif;
   font-weight: normal;
   font-size: 12px;
   line-height: 15px;
