--- a/src/components/InfoTooltip/InfoTooltip.css
+++ b/src/components/InfoTooltip/InfoTooltip.css
@@ -1,4 +1,4 @@
-.popup__InfoTooltip {
+.popup__info-tool-tip {
   background-color: #ffffff;
   box-shadow: 0px 0px 25px rgb(0 0 0 / 15%);
   border-radius: 10px;
@@ -9,7 +9,7 @@
 }
 
 @media screen and (max-width: 500px) {
-  .popup__InfoTooltip {
+  .popup__info-tool-tip {
     width: 320px;
     margin: calc((100% - 331px) / 2);
     margin-top: 56px;
@@ -17,8 +17,9 @@
 }
 
 @media screen and (max-width: 340px) {
-  .popup__InfoTooltip {
+  .popup__info-tool-tip {
     margin: calc((100% - 331px) / 2);
+    margin-top: 56px;
   }
 }
 
@@ -33,7 +34,7 @@
 .info__text {
   align-self: center;
   margin: 0;
-  font-family: Roboto;
+  font-family: Roboto, Arial, sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
@@ -43,5 +44,10 @@
 
 .info__link {
   text-decoration: none;
+  font-family: Inter, Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 22px;
   color: #2f71e5;
 }
