--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -20,10 +20,10 @@
   }
 }
 
-.header__nav__link {
+.header__nav_link {
   color: #ffffff;
   text-decoration: none;
-  font-family: Roboto;
+  font-family: Roboto, Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -32,40 +32,62 @@
 }
 
 @media screen and (max-width: 950px) {
-  .header__nav__link {
+  .header__nav_link {
     margin: 0 0 0 2%;
   }
 }
 
 @media screen and (max-width: 500px) {
-  .header__nav__link {
+  .header__nav_link {
     display: none;
   }
 }
 
-.header__nav__link:hover {
+.header__nav_link:hover {
   opacity: 0.8;
 }
 
-.header__nav__link_type_black {
+.header__nav_link_type_black {
   color: black;
 }
 
-.header__nav__link_type_black:hover {
+.header__nav_link_type_black:hover {
   opacity: 0.8;
 }
 
-.header__nav__link:last-of-type {
+.header__nav_link:last-of-type {
   margin-right: 4%;
 }
 
 @media screen and (max-width: 950px) {
-  .header__nav__link:last-of-type {
+  .header__nav_link:last-of-type {
     margin-right: 3%;
   }
 }
 
-.header__nav__button {
+.header__nav_link_type_active {
+  border-bottom: 3px solid white;
+  padding: 23px 0;
+}
+
+@media screen and (max-width: 950px) {
+  .header__nav_link_type_active {
+    padding: 17px 0;
+  }
+}
+
+.header__nav_link_type_active-black {
+  border-bottom: 3px solid black;
+  padding: 23px 0;
+}
+
+@media screen and (max-width: 950px) {
+  .header__nav_link_type_active-black {
+    padding: 17px 0;
+  }
+}
+
+.header__nav_button {
   width: 30%;
   height: 48px;
   border: 1px solid #ffffff;
@@ -77,7 +99,7 @@
   background: rgba(196, 196, 196, 0.01);
   color: #fff;
   cursor: pointer;
-  font-family: Roboto;
+  font-family: Roboto, Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -85,22 +107,22 @@
 }
 
 @media screen and (max-width: 500px) {
-  .header__nav__button {
+  .header__nav_button {
     visibility: hidden;
     width: 0;
   }
 }
 
-.header__nav__button:hover {
+.header__nav_button:hover {
   opacity: 0.8;
 }
 
-.header__nav__button_type_black {
+.header__nav_button_type_black {
   color: black;
   border: 1px solid black;
 }
 
-.header__nav__button_type_black:hover {
+.header__nav_button_type_black:hover {
   opacity: 0.8;
 }
 
@@ -115,7 +137,7 @@
   background-image: url("../../images/logOutBlack.svg");
 }
 
-.header__nav__menu {
+.header__nav_menu {
   background-image: url("../../images/menu.svg");
   display: none;
   width: 24px;
@@ -126,11 +148,11 @@
 }
 
 @media screen and (max-width: 500px) {
-  .header__nav__menu {
+  .header__nav_menu {
     display: block;
   }
 }
 
-.header__nav__menu_type_black {
+.header__nav_menu_type_black {
   background-image: url("../../images/menuBlack.svg");
 }
