--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -10,7 +10,7 @@
 }
 
 .search-results__title {
-  font-family: Roboto-slab;
+  font-family: Roboto-slab, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 40px;
@@ -36,7 +36,7 @@
   border-radius: 80px;
   background-color: #fff;
   cursor: pointer;
-  font-family: Roboto;
+  font-family: Roboto, Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
