--- a/src/components/Preloader/preloader.css
+++ b/src/components/Preloader/preloader.css
@@ -1,26 +1,36 @@
 .preloader {
-  height: 282px;
   background: #f5f6f7;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  visibility: hidden;
   align-items: center;
+  padding-top: 80px;
+  padding-bottom: 80px;
 }
 
 .preloader__circle {
   display: block;
-  width: 50px;
-  height: 50px;
-  border: 4px solid #444;
+  width: 74px;
+  height: 74px;
+  border: 1px solid #444;
   border-bottom-color: #888;
-
   border-radius: 50%;
-
   animation: spin 0.75s infinite linear;
+  box-sizing: border-box;
 }
 
 @keyframes spin {
   100% {
     transform: rotate(360deg);
   }
+}
+
+.preloader__text {
+  font-family: Roboto, Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 24px;
+  color: #b6bcbf;
+  margin: 24px 0 0 0;
 }
