--- a/src/components/SavedNewsHeader/SavedNewsHeader.css
+++ b/src/components/SavedNewsHeader/SavedNewsHeader.css
@@ -15,7 +15,7 @@
 }
 
 .saved-news__title {
-  font-family: Roboto;
+  font-family: Roboto, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -27,7 +27,7 @@
 .saved-news__details {
   color: #1a1b22;
   width: 37%;
-  font-family: Roboto-slab;
+  font-family: Roboto-slab, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 40px;
@@ -55,7 +55,7 @@
 }
 
 .saved-news__Keywords {
-  font-family: Roboto;
+  font-family: Roboto, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
