--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,4 +1,4 @@
-.header__search {
+.search {
   display: flex;
   flex-direction: column;
   width: 42%;
@@ -6,14 +6,14 @@
 }
 
 @media screen and (max-width: 1350px) {
-  .header__search {
+  .search {
     width: 59%;
     margin: 38px auto;
   }
 }
 
 @media screen and (max-width: 500px) {
-  .header__search {
+  .search {
     width: 100%;
     padding: 30px 17.5px 32px;
     box-sizing: border-box;
@@ -21,8 +21,8 @@
   }
 }
 
-.header__search__title {
-  font-family: Roboto-slab;
+.search__title {
+  font-family: Roboto-slab, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 60px;
@@ -31,14 +31,14 @@
 }
 
 @media screen and (max-width: 950px) {
-  .header__search__title {
+  .search__title {
     font-size: 36px;
     line-height: 40px;
   }
 }
 
-.header__search__subtitle {
-  font-family: Roboto;
+.search__subtitle {
+  font-family: Roboto, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -47,12 +47,12 @@
 }
 
 @media screen and (max-width: 950px) {
-  .header__search__subtitle {
+  .search__subtitle {
     margin: 16px 0 0;
   }
 }
 
-.header__search__container {
+.search__container {
   width: 100%;
   height: 64px;
   position: relative;
@@ -62,21 +62,21 @@
 }
 
 @media screen and (max-width: 950px) {
-  .header__search__container {
+  .search__container {
     margin: 48px auto 0;
     height: 56px;
   }
 }
 
 @media screen and (max-width: 500px) {
-  .header__search__container {
+  .search__container {
     margin-top: 122px;
     flex-direction: column;
     height: unset;
   }
 }
 
-.header__search__input {
+.search__input {
   width: 100%;
   border-radius: 100px;
   border: 1px solid #d1d2d6;
@@ -84,7 +84,7 @@
   color: black;
   padding: 0;
   padding-left: 24px;
-  font-family: Roboto;
+  font-family: Roboto, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -92,7 +92,7 @@
 }
 
 @media screen and (max-width: 500px) {
-  .header__search__input {
+  .search__input {
     width: unset;
     padding-top: 17px;
     padding-bottom: 17px;
@@ -100,7 +100,7 @@
   }
 }
 
-.header__search__button {
+.search__button {
   width: 198px;
   text-align: center;
   color: #fff;
@@ -112,7 +112,7 @@
   background-color: #2f71e5;
   box-shadow: 0px 5px 15px rgb(14 26 57 / 20%);
   padding: 0;
-  font-family: Roboto;
+  font-family: Roboto, Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -120,14 +120,14 @@
 }
 
 @media screen and (max-width: 950px) {
-  .header__search__button {
+  .search__button {
     width: 160px;
     font-size: 18px;
   }
 }
 
 @media screen and (max-width: 500px) {
-  .header__search__button {
+  .search__button {
     width: unset;
     padding: 16px 0;
     margin: 16px 0 0;
@@ -135,12 +135,12 @@
   }
 }
 
-.header__search__button:hover {
+.search__button:hover {
   border: 1px solid #347eff;
   background-color: #347eff;
 }
 
-.header__search__button:active {
+.search__button:active {
   border: 1px solid #2a65cc;
   background-color: #2a65cc;
 }
