--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -63,7 +63,7 @@
   }
 }
 
-.footer__nav_links {
+.footer__links {
   display: flex;
   justify-content: space-evenly;
   width: 60%;
@@ -75,8 +75,8 @@
   }
 }
 
-.footer__nav_home,
-.footer__nav_practicum {
+.footer__home,
+.footer__practicum {
   text-decoration: none;
   color: black;
   font-family: Roboto, Arial, sans-serif;
@@ -87,19 +87,19 @@
 }
 
 @media screen and (max-width: 750px) {
-  .footer__nav_home,
-  .footer__nav_practicum {
+  .footer__home,
+  .footer__practicum {
     margin-bottom: 38px;
   }
 }
 
-.footer__nav_social {
+.footer__social {
   display: flex;
   justify-content: space-evenly;
   width: 40%;
 }
 
-.footer__nav_whatsapp {
+.footer__whatsapp {
   background-image: url("../../images/whatsapp.svg");
   background-size: 20px;
   width: 20px;
@@ -107,7 +107,7 @@
   background-repeat: no-repeat;
 }
 
-.footer__nav_facebook {
+.footer__facebook {
   background-image: url("../../images/facebook.svg");
   background-size: 20px;
   width: 20px;
