--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -136,6 +136,8 @@
   flex-direction: column;
   margin-left: 24px;
   margin-right: 24px;
+  text-decoration: none;
+  color: #000000;
 }
 
 @media screen and (max-width: 950px) {
@@ -171,6 +173,11 @@
   margin: 0;
   margin-top: 12px;
   height: 60px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 @media screen and (max-width: 1350px) {
@@ -178,6 +185,7 @@
     font-size: 22px;
     line-height: 24px;
     height: 72px;
+    -webkit-line-clamp: 3;
   }
 }
 
